Add Women Safety Awareness Website project details
Added a new project section for Women Safety Awareness Website.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
             </p>
             <a href="https://github.com/jainsi01/Cafe-Project" target="_blank">View on GitHub</a>
         </div>
+        <div class="project">
+    <h3>Women Safety Awareness Website</h3>
+    <p>
+        A static frontend website developed using HTML and CSS to spread awareness
+        about women’s safety by providing important information and emergency
+        resources in a clean and structured layout.
+    </p>
+    <a href="https://github.com/jainsi01/Women-Saftey-Awareness-" target="_blank">
+        View on GitHub
+    </a>
+</div>
+
     </section>
 
     <section>
